--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
   "description": "",
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
-    "@types/express": "^5.0.0",
+    "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.2",
     "@types/jsonwebtoken": "^9.0.9",
     "@types/node": "^22.13.10",
     "nodemon": "^3.1.9",
@@ -30,8 +31,9 @@
     "@types/multer": "^1.4.12",
     "713_backendsurvivor_api": "file:",
     "bcrypt": "^5.1.1",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.7",
-    "express": "^4.21.2",
+    "express": "^4.17.2",
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1"
   }
