--- a/package.json
+++ b/package.json
@@ -35,6 +35,6 @@
     "dotenv": "^16.4.7",
     "express": "^4.17.2",
     "jsonwebtoken": "^9.0.2",
-    "multer": "^1.4.5-lts.1"
+    "multer": "^2.0.2"
   }
 }
